--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -1,18 +1,3 @@
-<div id="barchart2">
-    <canvas id="piechart" width="50" height="50"></canvas>
-    <p id="p1"><b>Pie Chart Demo 1</b></p>
-</div>
-<div id="barchart2">
-    <canvas id="piechart2" width="50" height="50"></canvas>
-    <p id="p1"><b>BarChart Demo 2</b></p>
-</div>
-
-<div id="piechart12">
-    <canvas id="piechart3" width="50" height="50"></canvas>
-    <p id="p1"><b>Pie Chart Demo 3</b></p>
-</div>
-
-<div id="piechart12">
-    <canvas id="piechart4" width="50" height="50"></canvas>
-    <p id="p1"><b>Pie Chart Demo 4</b></p>
-</div>
+<div class="chart-container" style="position: relative; height:40vh; width:70vw">    
+  <canvas id="canvas"></canvas>    
+</div>  
