--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -1,3 +1,4 @@
-<div class="chart-container" style="position: relative; height:40vh; width:70vw">    
-  <canvas id="canvas"></canvas>    
-</div>  
+<div *ngFor='let user of users' style="text-align: center;">
+   <h2>
+          {{users.u_id}}    </h2>
+</div>
