--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -19,7 +19,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item" routerLink="createcustomer"  (click)="createCustomer()" >Create Customer</a>
                             <a class="dropdown-item">Update Customer</a>
-                            <a class="dropdown-item">Customer Details</a>
+                            <a class="dropdown-item" routerLink="customerdetail">Customer Details</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
