--- a/MyApp/src/app/component/ServiceEngg/service-engg-details/service-engg-details.component.html
+++ b/MyApp/src/app/component/ServiceEngg/service-engg-details/service-engg-details.component.html
@@ -1,7 +1,7 @@
 <h2> ServiceEngineer Details</h2>
 <div class="input-group">
     <input type="text" class="form-control" placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search" 
-    [(ngModel)]="u_name" autocomplete="off">
+    [(ngModel)]="serviceEng" (input)="search()" autocomplete="off">
     <div class="input-group-append">
         <button type="submit" class="btn btn-primary">Search</button>
     </div>
@@ -18,7 +18,8 @@
         <th>DateOfJoining</th>
         <th>password</th>
     </thead>
-        <tbody  *ngFor="let engineer of Engineers | searchPipe:u_name;let i=index">
+    <!-- | searchPipe:serviceEng;let i=index -->
+        <tbody  *ngFor="let engineer of Engineers"> 
             <tr>
                 <!-- <th scope="row">{{i+1}}</th> -->
                 <td>{{engineer.u_name}}</td>
@@ -26,7 +27,7 @@
                 <td>{{engineer.u_email}}</td>
                 <td>{{engineer.u_address}}</td>
                 <!-- <td>{{engineer.u_EngineerType}}</td> -->
-                <td>{{engineer.u_joinDate}}</td>
+                <td>{{engineer.u_joinDate| date:'dd/MM/yyyy'}}</td>
                 <td>{{engineer.u_password}}</td>
             </tr>
         </tbody>
