--- a/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
+++ b/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
@@ -1,10 +1,60 @@
-<p>assign-complaint works!</p>
-<div *ngFor='let user of complaint' style="text-align: center;">
-    <h2>
-           {{user.c_desc}}    </h2>
-  </div>
-  <div *ngFor='let user of c_id' style="text-align: center;">
-    <h2>
-           {{user.c_id}}    </h2>
-  </div>
-        
+
+ <div class="container">   
+       <div class="row">
+
+
+
+ <div class='card'>
+       <div class='card-header'  id="r1">
+   <b> {{pageTitle}}</b>
+        </div>
+       <div class='card-body' >
+         <div class='row'>
+           <div class='col-md-1'><b>Filter By</b> </div>
+           <div class='col-md-8'>
+             <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"/>
+           </div>
+         </div>
+         <div class='row'
+              *ngIf='listFilter'>
+           <div class='col-md-6'>
+             <h4> Filtered by: {{content}}</h4>
+           </div>
+         </div>
+         <div class='table-responsive'>
+           <table class='table'>
+             <thead>
+               <tr>
+                 
+                 <th>Id</th>
+                 <th>Complaint</th>
+                 <th>Date</th>
+                 <th>Machine Name</th>
+                 <th>Assign</th>
+               </tr>
+             </thead>
+             <tbody>
+               <tr *ngFor="let user of complaint | filter:searchText" >
+                 <td>
+                     {{user.c_id}} 
+                </td>
+                 <td>
+                     {{user.c_desc}}
+                 </td>
+                 <td>
+                     {{user.c_date}}
+                
+                 </td>
+                 <td>{{user.Machine_type}}</td>
+                 <td>
+                     <button class='btn btn-primary'>Assign</button>
+                 </td>
+
+               </tr>
+             </tbody>
+           </table>
+         </div>
+       </div>
+     </div>
+</div>      
+</div>
