--- a/MyApp/src/app/component/assign-complaint/assign-complaint.component.css
+++ b/MyApp/src/app/component/assign-complaint/assign-complaint.component.css
@@ -5,3 +5,10 @@ thead {
   #r1{
     background-color: rgb(170, 170, 252) !important;
   }
+.table{
+  table-layout: fixed !important;
+  width: 100% !important;  
+}
+.container{
+  margin-bottom: 30px !important;
+}
