--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -107,7 +107,7 @@
                   </tr>
               </thead>
               <tbody>
-                  <tr *ngFor="let user of complaint | filter:searchText">
+                  <tr *ngFor="let user of filterData | filter:searchText">
                       <td>
                           {{user.c_id}}
                       </td>
